--- a/src/Backend/FeiraTech.Application/FeiraTech.Application.csproj
+++ b/src/Backend/FeiraTech.Application/FeiraTech.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Shared\FeiraTech.Communication\FeiraTech.Communication.csproj" />
     <ProjectReference Include="..\..\Shared\FeiraTech.Exceptions\FeiraTech.Exceptions.csproj" />
     <ProjectReference Include="..\FeiraTech.Domain\FeiraTech.Domain.csproj" />
