Elaboração da controller de forma definida e use case

--- a/src/Backend/FeiraTech.API/appsettings.Development.json
+++ b/src/Backend/FeiraTech.API/appsettings.Development.json
@@ -3,6 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+    "ConnectionString": "Server=localhost;Database=mybookrecipe;user=root;password=1234;",
+ 
   }
 }
