Mudança de configuração do DbContext

--- a/src/Backend/FeiraTech.API/appsettings.Development.json
+++ b/src/Backend/FeiraTech.API/appsettings.Development.json
@@ -4,7 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     },
-    "ConnectionString": "Server=localhost;Database=mybookrecipe;user=root;password=1234;",
+    "ConnectionString": "Server=localhost;Database=feiratech;user=root;password=1234;",
  
   }
 }
