--- a/src/Backend/FeiraTech.API/appsettings.Development.json
+++ b/src/Backend/FeiraTech.API/appsettings.Development.json
@@ -3,8 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionString": "Server=localhost;Database=feiratech;user=root;password=1234;",
- 
+    }
+  },
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Database=feiratech;user=root;password=1234;"
   }
 }
