--- a/src/Backend/FeiraTech.API/appsettings.Development.json
+++ b/src/Backend/FeiraTech.API/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "Database": "Server=localhost;Database=feiratech;user=root;password=1234;"
+  },
+  "Services": {
+    "Password": {
+      "AdditionalKey": "1234"
+    }
   }
-}
+ } 
