--- a/src/Backend/FeiraTech.API/appsettings.Development.json
+++ b/src/Backend/FeiraTech.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Server=localhost;Database=feiratec;user=root;password=jorge123;"
+    "Database": "Server=localhost;Database=feiratech;user=root;password=jorge123;"
   }
 }
